--- a/moodle_web_server/templates/opsworks.php.erb
+++ b/moodle_web_server/templates/opsworks.php.erb
@@ -2,12 +2,12 @@
 
 class Opsworks
 {
-	public db_host = '<%= @db_host %>';
-	public db_name = '<%= @db_name %>';
-	public db_user = '<%= @db_user %>';
-	public db_pass = '<%= @db_pass %>';
-	public memcached_ip = '<%= @memcached_ip %>';
-	public moodledata_ip = '<%= @moodledata_ip %>';
+	public $db_host = '<%= @db_host %>';
+	public $db_name = '<%= @db_name %>';
+	public $db_user = '<%= @db_user %>';
+	public $db_pass = '<%= @db_pass %>';
+	public $memcached_ip = '<%= @memcached_ip %>';
+	public $moodledata_ip = '<%= @moodledata_ip %>';
 }
 
 ?>
