use file cache for yui data

--- a/cookbooks/moodle_opsworks/templates/config.php.muc.erb
+++ b/cookbooks/moodle_opsworks/templates/config.php.muc.erb
@@ -531,6 +531,12 @@
   array (
     0 =>
     array (
+      'store' => 'default_application',
+      'definition' => 'core/yuimodules',
+      'sort' => 1,
+    ),
+    1 =>
+    array (
       'store' => 'ops-moodle-cache',
       'definition' => 'core/coursemodinfo',
       'sort' => 1,
