--- a/cookbooks/moodle_opsworks/templates/aws-up-check.php.erb
+++ b/cookbooks/moodle_opsworks/templates/aws-up-check.php.erb
@@ -1,3 +1,12 @@
 <?php
-echo $_SERVER['HTTP_HOST'];
+$url = 'http://localhost//login/index.php';
+$headers = get_headers($url);
+$code = isset($headers[0]) ? $headers[0] : '';
+
+if ($code == "HTTP/1.1 200 OK"){
+echo "OK";
+} else {
+header($_SERVER["SERVER_PROTOCOL"]." 404 Not Found", true, 404);
+};
+
 ?>
