override default cache in template

--- a/cookbooks/moodle_opsworks/templates/config.php.muc.erb
+++ b/cookbooks/moodle_opsworks/templates/config.php.muc.erb
@@ -528,15 +528,33 @@
       'sharingoptions' => 2,
     ),
   ),
-  'definitionmappings' =>
+'definitionmappings' =>
   array (
     0 =>
+    array (
+      'store' => 'ops-moodle-cache',
+      'definition' => 'core/completion',
+      'sort' => 1,
+    ),
+    1 =>
+    array (
+      'store' => 'ops-moodle-cache',
+      'definition' => 'mod_glossary/concepts',
+      'sort' => 1,
+    ),
+    3 =>
     array (
       'store' => 'default_application',
       'definition' => 'core/yuimodules',
       'sort' => 1,
     ),
-    1 =>
+    4 =>
+    array (
+      'store' => 'ops-moodle-cache',
+      'definition' => 'core/calendar_subscriptions',
+      'sort' => 1,
+    ),
+    5 =>
     array (
       'store' => 'ops-moodle-cache',
       'definition' => 'core/coursemodinfo',
