Salt from opsworks json

--- a/cookbooks/moodle_opsworks/templates/config.php.erb
+++ b/cookbooks/moodle_opsworks/templates/config.php.erb
@@ -31,6 +31,8 @@ $CFG->dataroot  = '/mnt/nfs/moodledata';
 $CFG->localcachedir = '/dev/shm/moodledata/localcache';
 $CFG->admin     = 'admin';
 
+$CFG->passwordsaltmain    = '<%= @pw_salt %>';
+
 $CFG->session_handler_class = '\core\session\memcached';
 $CFG->session_memcached_save_path = $ops->memcached_ip . ':11212';
 $CFG->session_memcached_prefix = 'memc.sess.key.';
