Reduce backup frequency as workaround for EFS credit balance exhaustion

--- a/cookbooks/moodle_opsworks/templates/moodlebackup.cron.erb
+++ b/cookbooks/moodle_opsworks/templates/moodlebackup.cron.erb
@@ -1,2 +1,2 @@
 15 * * * * ec2-user /bin/bash /home/ec2-user/backup-moodledata.sh
-30 * * * * ec2-user /bin/bash /home/ec2-user/backup-moodle-mysql.sh
+30 */6 * * * ec2-user /bin/bash /home/ec2-user/backup-moodle-mysql.sh
