config always requires opsworks.php, not once

--- a/cookbooks/moodle_opsworks/templates/config.php.erb
+++ b/cookbooks/moodle_opsworks/templates/config.php.erb
@@ -1,6 +1,6 @@
 <?php  // Moodle configuration file
 
-require_once('/srv/opsworks.php');
+require('/srv/opsworks.php');
 $ops = new Opsworks();
 
 unset($CFG);
