--- a/cookbooks/moodle_opsworks/templates/moodlebackup.cron.erb
+++ b/cookbooks/moodle_opsworks/templates/moodlebackup.cron.erb
@@ -1,6 +1,6 @@
-0 0 * * * * ec2-user /bin/bash /home/ec2-user/backup-moodledata.sh daily
-0 1 * * * 1 ec2-user /bin/bash /home/ec2-user/backup-moodledata.sh weekly
-0 2 1 * * * ec2-user /bin/bash /home/ec2-user/backup-moodledata.sh monthly
-15 2 1 * * * ec2-user /bin/bash /home/ec2-user/backup-moodle-mysql.sh monthly
-0 3 1 1 * * ec2-user /bin/bash /home/ec2-user/backup-moodledata.sh yearly
-15 3 1 1 * * ec2-user /bin/bash /home/ec2-user/backup-moodle-mysql.sh yearly
+0 0 * * * ec2-user /bin/bash /home/ec2-user/backup-moodledata.sh daily
+0 1 * * 1 ec2-user /bin/bash /home/ec2-user/backup-moodledata.sh weekly
+0 2 1 * * ec2-user /bin/bash /home/ec2-user/backup-moodledata.sh monthly
+15 2 1 * * ec2-user /bin/bash /home/ec2-user/backup-moodle-mysql.sh monthly
+0 3 1 1 * ec2-user /bin/bash /home/ec2-user/backup-moodledata.sh yearly
+15 3 1 1 * ec2-user /bin/bash /home/ec2-user/backup-moodle-mysql.sh yearly
